--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todays 2nd Github</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -14,6 +15,9 @@
     <h3>New code sent</h3>
     <h4>I am very excited</h4>
     <p>Coding is very interesting.. i am enjoying it. do you want to lestr it</p>
+    <p>Coding is very interesting.. i am enjoying it. do you want to learn it. hi how are you? where are you?</p>
+    <h4>Coding</h4>
+    <p>I am coding coding coding and coding.</p>
 </body>
 
 </html>
